--- a/BookStore/Views/Nav/Menu.cshtml
+++ b/BookStore/Views/Nav/Menu.cshtml
@@ -12,7 +12,7 @@
                 @Html.RouteLink(link, new
                 {
                 controller = "Book",
-                action = "List",
+                action = "ListByGenre",
                 genre = link,
                 page = 1
                 })
