--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -17,13 +17,15 @@
             </div>
             <div class="col-md-6"></div>
             <div class="col-md-3 user">
-                @{Html.RenderAction("UserLogin", "Account");}           
-                
+                @*
+                    @{Html.RenderAction("UserLogin", "Account");}
+                *@
+
             </div>
         </div>
         <div class="alphabet row">
             <div class="col-md-12">
-                @{Html.RenderAction("Alphabet", "Book");}
+                @{Html.RenderAction("Alphabet", "Nav");}
             </div>
         </div>
         <div class="row">
