--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookStore.Domain.Entities.Book
+﻿@model BookStore.DO.Entities.Book
 @using BookStore.HtmlHelpers
 @{
     ViewBag.Title = "Edit";
@@ -24,17 +24,19 @@
                 <div class="editor-field">@Html.EditorFor(b => b.Author.Last_Name, new { @class = "single-line" })</div>
                 <div class="editor-label">@Html.LabelFor(b => b.Genre, new { @class = "single-line" })</div>
                 <div class="editor-field">@Html.DropDownListFor(b => b.Genre.Genre_Name, list, "Жанр", new { @class = "single-line" })</div>
-                <div class="editor-label">@Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { Title = @Model.Title, last_name = @Model.Author.Last_Name, first_name = @Model.Author.First_Name, book_ID = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search1", InsertionMode = InsertionMode.ReplaceWith, HttpMethod = "POST" })</div>
+                <div class="editor-label">@Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { Title = @Model.Title, last_name = @Model.Author.Last_Name, first_name = @Model.Author.First_Name, book_ID = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Annotation, new { @class = "single-line" })</div>
-                <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, last_name = @Model.Author.Last_Name, first_name = @Model.Author.First_Name, book_ID = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.ReplaceWith, HttpMethod = "POST" })</div>
+                <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, last_name = @Model.Author.Last_Name, first_name = @Model.Author.First_Name, book_ID = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>
                 <div class="editor-label">@Html.LabelFor(b => b.Price, new { @class = "single-line" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Price, new { @class = "single-line", type = "number", step = "any" })</div>
                 <div class="editor-label">@Html.LabelFor(b => b.Tages, new { @class = "single-line" })</div>
-                <a href="#" onclick="return addField()">Add New Field</a>
-                <div class="editor-field" id="Tags">@Html.EditorFor(t => t.Tages, new { @class = "single-line" })</div>
-                <input type="submit" class="btn-default btn" value="Save" />
-                <button class="btn-default btn" href="@Url.Action("Index","Admin")">Cancel</button>
+                <div class="editor-field" id="Tags">
+                    @Html.EditorFor(t => t.Tages, new { @class = "single-line" })
+                    <a href="#" id="addField" class="glyphicon glyphicon-plus" aria-hidden="true" onclick="return AddField('')"></a>
+                </div>
+                <input type="submit" class="btn-default btn" value="Сохранить" />
+                <button class="btn-default btn" href="@Url.Action("Index","Admin")">Отменить</button>
             }
         </div>
         <div class="col-md-8">
