--- a/BookStore/Views/Admin/Index.cshtml
+++ b/BookStore/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookStore.Domain.Entities.Book>
+﻿@model IEnumerable<BookStore.DO.Entities.Book>
 
 @{
     ViewBag.Title = "Admin";
