--- a/BookStore/Views/Shared/_AdminLayout.cshtml
+++ b/BookStore/Views/Shared/_AdminLayout.cshtml
@@ -7,7 +7,7 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <script src="~/scripts/jquery-1.9.1.js"></script>
     <script src="~/scripts/jquery.unobtrusive-ajax.min.js"></script>
-    <script src="~/scripts/jquery.unobtrusive-ajax.js"></script>
+    <script src="~/scripts/demo.js"></script>
     <script src="~/scripts/addfield.js"></script>
     <title></title>
 </head>
