--- a/BookStore/Views/Admin/Create.cshtml
+++ b/BookStore/Views/Admin/Create.cshtml
@@ -10,29 +10,19 @@
 {
     <h1><span>Создать</span></h1>
     <label>
-        <span>@Html.DisplayNameFor(b=>b.Title)</span>
+        <span>@Html.DisplayNameFor(x=>x.Title)</span>
         @Html.EditorFor(b => b.Title, new { @class = "single-line" })
     </label>
     <label>
-        <span>@Html.DisplayNameFor(b => b.Author.First_Name)</span>
-        @Html.EditorFor(b => b.Author.First_Name, new { @class = "single-line" })
     </label>
-    <label>
-        <span>@Html.DisplayNameFor(b => b.Author.Middle_Name)</span>
-
-        @Html.EditorFor(b => b.Author.Middle_Name, new { @class = "single-line" })
-    </label>
-    <label>
-        <span>@Html.DisplayNameFor(b => b.Author.Last_Name)</span>
-        @Html.EditorFor(b => b.Author.Last_Name, new { @class = "single-line" })
-    </label>
+    @Html.EditorFor(b => b.Authors, new { @class = "single-line" })
     <label>
         <span>@Html.ActionLink("Назад", "Index", new { @class = "button" })</span>
         <input type="submit" class="button" value="Сохранить" />
     </label>
-    
 
-   
+
+
 }
 
 
