--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -4,7 +4,6 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4" id="edit">
@@ -13,27 +12,29 @@
             {
                 IEnumerable<SelectListItem> list = ViewBag.Genres;
                 @Html.EditorFor(b => b.Book_ID)
-                @Html.EditorFor(b => b.Author_ID)
                 <div class="editor-label">@Html.LabelFor(b => b.Title, new { @class = "single-line" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Title, new { @class = "single-line" })</div>
-                <div class="editor-label">@Html.LabelFor(b => b.Author.First_Name, new { @class = "single-line" })</div>
-                <div class="editor-field">@Html.EditorFor(b => b.Author.First_Name, new { @class = "single-line" })</div>
-                <div class="editor-label">@Html.LabelFor(b => b.Author.Middle_Name, new { @class = "single-line" })</div>
-                <div class="editor-field">@Html.EditorFor(b => b.Author.Middle_Name, new { @class = "single-line" })</div>
-                <div class="editor-label">@Html.LabelFor(b => b.Author.Last_Name, new { @class = "single-line" })</div>
-                <div class="editor-field">@Html.EditorFor(b => b.Author.Last_Name, new { @class = "single-line" })</div>
-                <div class="editor-label">@Html.LabelFor(b => b.Genre, new { @class = "single-line" })</div>
-                <div class="editor-field">@Html.DropDownListFor(b => b.Genre.Genre_Name, list, "Жанр", new { @class = "single-line" })</div>
-                <div class="editor-label">@Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { Title = @Model.Title, last_name = @Model.Author.Last_Name, first_name = @Model.Author.First_Name, book_ID = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })</div>
+                <div id="Authors">
+                    <a href="#" class="glyphicon glyphicon-plus" aria-hidden="true" onclick="return AddField('Author')"></a>
+                    @Html.EditorFor(b => b.Authors, new { @class = "single-line" })
+                </div>
+                <div class="editor-label">@Html.LabelFor(b => b.Genres, new { @class = "single-line" })</div>
+                <a href="#" class="glyphicon glyphicon-plus" aria-hidden="true" onclick="return AddField('Genre')"></a>
+                <div id="Genres">
+                    @Html.EditorFor(b => b.Genres, new { @class = "single-line" })
+
+
+                </div>
+                <div class="editor-label">@Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { Title = @Model.Title, last_name = @Model.Authors.First().Last_Name, first_name = @Model.Authors.First().First_Name, book_ID = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Annotation, new { @class = "single-line" })</div>
-                <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, last_name = @Model.Author.Last_Name, first_name = @Model.Author.First_Name, book_ID = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })</div>
+                <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { Title = @Model.Title, last_name = @Model.Authors.First().Last_Name, first_name = @Model.Authors.First().First_Name, book_ID = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>
                 <div class="editor-label">@Html.LabelFor(b => b.Price, new { @class = "single-line" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Price, new { @class = "single-line", type = "number", step = "any" })</div>
                 <div class="editor-label">@Html.LabelFor(b => b.Tages, new { @class = "single-line" })</div>
                 <div class="editor-field" id="Tags">
+                    <a href="#" id="addField" class="glyphicon glyphicon-plus" aria-hidden="true" onclick="return AddField('Tag')"></a>
                     @Html.EditorFor(t => t.Tages, new { @class = "single-line" })
-                    <a href="#" id="addField" class="glyphicon glyphicon-plus" aria-hidden="true" onclick="return AddField('')"></a>
                 </div>
                 <input type="submit" class="btn-default btn" value="Сохранить" />
                 <button class="btn-default btn" href="@Url.Action("Index","Admin")">Отменить</button>
