--- a/BookStore/Views/Admin/Index.cshtml
+++ b/BookStore/Views/Admin/Index.cshtml
@@ -17,21 +17,19 @@
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
+       
         <th>
-            @Html.DisplayNameFor(model => model.Author.First_Name)
+            @Html.DisplayNameFor(model => model.Authors.First().First_Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Author.Middle_Name)
+            @Html.DisplayNameFor(model => model.Authors.First().Middle_Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Author.Last_Name)
+            @Html.DisplayNameFor(model => model.Authors.First().Last_Name)
         </th>
         <th class="NumericCol">
             @Html.DisplayNameFor(model => model.Rating)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Genre.Genre_Name)
-        </th>
+        </th>       
         <th class="NumericCol">
             @Html.DisplayNameFor(model => model.Price)
         </th>
@@ -45,11 +43,10 @@
     {
         <tr>
             <td>@Html.ActionLink(item.Title, "Edit", new { bookID = item.Book_ID })</td>
-            <td>@Html.DisplayFor(modelItem => item.Author.First_Name)</td>
-            <td>@Html.DisplayFor(modelItem => item.Author.Middle_Name)</td>
-            <td>@Html.DisplayFor(modelItem => item.Author.Last_Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Authors.First().First_Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Authors.First().Middle_Name)</td>
+            <td>@Html.DisplayFor(modelItem => item.Authors.First().Last_Name)</td>
             <td>@Html.DisplayFor(modelItem => item.Rating)</td>
-            <td>@Html.DisplayFor(modelItem => item.Genre.Genre_Name)</td>
             <td>@Html.DisplayFor(modelItem => item.Price)</td>
             <td><p class="annotation">@Html.DisplayFor(modelItem => item.Annotation)</p></td>
             <td>
