--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -17,12 +17,8 @@
             </div>
             <div class="col-md-6"></div>
             <div class="col-md-3 user">
-                @Html.RouteLink("Admin/Index", new { action = "Index", controller = "Admin" }, new { @class = "btn btn-default" })
-
-                                @*
-        @{Html.RenderAction("UserLogin", "Account");}
-
-                                *@
+                @*@Html.RouteLink("Admin/Index", new { action = "Index", controller = "Admin" }, new { @class = "btn btn-default" })*@
+                @{Html.RenderAction("UserLogin", "Account");}
             </div>
         </div>
         <div class="alphabet row">
