Start User Profile

--- a/BookStore/Views/Admin/Create.cshtml
+++ b/BookStore/Views/Admin/Create.cshtml
@@ -15,7 +15,7 @@
     </label>
     <label>
     </label>
-    @Html.EditorFor(b => b.Authors, new { @class = "single-line" })
+    @Html.EditorFor(b => b.BookAuthors, new { @class = "single-line" })
     <label>
         <span>@Html.ActionLink("Назад", "Index", new { @class = "button" })</span>
         <input type="submit" class="button" value="Сохранить" />
