--- a/BookStore/Content/Site1.css
+++ b/BookStore/Content/Site1.css
@@ -122,4 +122,28 @@ DIV.pager A.selected {
 .pagination {
   margin: 8px 0 0 0 !important; }
 
+.bookheader {
+  margin: 2px;
+  padding: 2px;
+  border-bottom: 1px dotted;
+  border-bottom-color: silver; }
+  .bookheader p {
+    display: inline-flex;
+    margin-right: 15px; }
+  .bookheader .title {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px; }
+  .bookheader .author {
+    font-family: 'Book Antiqua';
+    font-size: 14px; }
+  .bookheader .rate {
+    text-align: right;
+    font-size: 12px; }
+  .bookheader .price {
+    text-align: right;
+    font-size: 12px; }
+  .bookheader .smallimage img {
+    max-height: 70px;
+    max-width: 70px; }
+
 /*# sourceMappingURL=Site1.css.map */
