--- a/BookStore/Content/Site1.scss
+++ b/BookStore/Content/Site1.scss
@@ -18,9 +18,10 @@ $font_2: Times New Roman;
 body {
     font-family: $font_0, $font_1, $font_2;
     margin: 0;
-    .alphabet{
-        background-color:Menu;
-        border-bottom:dotted 1px slategray;
+
+    .alphabet {
+        background-color: Menu;
+        border-bottom: dotted 1px slategray;
     }
 }
 
@@ -133,9 +134,8 @@ textarea {
 .itemb {
     margin: 10px;
     padding: 2px;
-    border-bottom: 2px dotted ;
-    border-bottom-color:#444;
-   
+    border-bottom: 2px dotted;
+    border-bottom-color: #444;
 
     .title {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -177,8 +177,8 @@ textarea {
             margin: 6px;
 
             &:hover {
-               // background-color: Silver;
-                text-decoration:underline;
+                // background-color: Silver;
+                text-decoration: underline;
             }
         }
     }
@@ -197,4 +197,43 @@ DIV.pager A.selected {
 
 .pagination {
     margin: 8px 0 0 0 !important;
+}
+
+.bookheader {
+    margin: 2px;
+    padding: 2px;
+    border-bottom: 1px dotted;
+    border-bottom-color: silver;
+   
+    p {
+        display: inline-flex; 
+        margin-right:15px;
+    }
+
+    .title {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+    }
+
+    .author {
+        font-family: 'Book Antiqua';
+        font-size: 14px;
+    }
+
+    .rate {
+        text-align: right;
+        font-size: 12px;
+    }
+
+    .price {
+        text-align: right;
+        font-size: 12px;
+    }
+
+    .smallimage {
+        img {
+            max-height: 70px;
+            max-width: 70px;
+        }
+    }
 }
