--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -15,7 +15,7 @@
                 <div class="editor-field">@Html.EditorFor(b => b.Title, new { @class = "single-line" })</div>
                 <div id="Authors">
                     <a href="#" class="glyphicon glyphicon-plus" aria-hidden="true" onclick="return AddField('Author')"></a>
-                    @Html.EditorFor(b => b.Authors, new { @class = "single-line" })
+                    @Html.EditorFor(b => b.BookAuthors, new { @class = "single-line" })
                 </div>
                 <div class="editor-label">@Html.LabelFor(b => b.Genres, new { @class = "single-line" })</div>
                 <a href="#" class="glyphicon glyphicon-plus" aria-hidden="true" onclick="return AddField('Genre')"></a>
