--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -3,7 +3,7 @@
     <div class="row itemb">
         <div class="col-md-10 col-lg-10 ">
             <p class="title">@Model.Title</p>
-            @foreach (var author in Model.Authors)
+            @foreach (var author in Model.BookAuthors)
             {
                 <p class="author">@author.First_Name @author.Middle_Name @author.Last_Name</p>
             }
@@ -23,7 +23,8 @@
             </div>
         </div>
         <div class="col-md-2 col-lg-2 image">
-            <img src="@Model.Image_url" class="img-thumbnail" />
+            <img src="@Model.Image_url" class="img-thumbnail"/>
+            @*@Html.Action("RateBook","Book",new{rate=7});*@
         </div>
     </div>
 </div>
