add modal dialog, cache book's covers to host, edit save book

--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -6,37 +6,45 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+
+    <script src="~/scripts/jquery-1.9.1.js"></script>
+    <script src="~/scripts/jquery-ui-1.8.24.js"></script>
+    <script src="~/scripts/jquery.unobtrusive-ajax.js"></script>
     <meta name="description" content="The description of my page" />
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row header">
-            <div class="col-md-3 logo">
-                <h1>Book Library</h1>
-            </div>
-            <div class="col-md-6"></div>
-            <div class="col-md-3 user">
-                @*@Html.RouteLink("Admin/Index", new { action = "Index", controller = "Admin" }, new { @class = "btn btn-default" })*@
-                @{Html.RenderAction("UserLogin", "Account");}
-            </div>
+<div class="container-fluid">
+    <div class="row header">
+        <div class="col-md-3 logo">
+            <h1>Book Library</h1>
         </div>
-        <div class="alphabet row">
-            <div class="col-md-12">
-                @{Html.RenderAction("Alphabet", "Nav");}
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3 col-lg-3">
-                @{Html.RenderAction("Menu", "Nav");}
-            </div>
-            <div class="col-md-9 col-lg-9 content">
-                @RenderBody()
-            </div>
+        <div class="col-md-6"></div>
+        <div class="col-md-3 user">
+            @*@Html.RouteLink("Admin/Index", new { action = "Index", controller = "Admin" }, new { @class = "btn btn-default" })*@
+            @{Html.RenderAction("UserLogin", "Account");}
         </div>
     </div>
+    <div class="alphabet row">
+        <div class="col-md-12">
+            @{Html.RenderAction("Alphabet", "Nav");}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3 col-lg-3">
+            @{Html.RenderAction("Menu", "Nav");}
+        </div>
+        <div class="col-md-9 col-lg-9 content">
+            @RenderBody()
+        </div>
+    </div>
+</div>
 
-
+    <div id="PopupWrapper"></div>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/common")
+    @RenderSection("scripts", required: false)
 
 </body>
 </html>
