--- a/BookStore/Views/Account/UserLogin.cshtml
+++ b/BookStore/Views/Account/UserLogin.cshtml
@@ -1,7 +1,8 @@
 ﻿@model MembershipUser
 @if (Model == null)
 {
-    @Html.RouteLink("Sign In", new { action = "Login", controller = "Account" }, new { @class = "btn btn-default" })
+    <a href="#" class="btn btn-default" id="LoginPopup" type="button">Sign In</a>
+    /*@Html.RouteLink("Sign In", new { action = "Login", controller = "Account" }, new { @class = "btn btn-default" })*/
     @Html.RouteLink("Sign up", new { action = "Register", controller = "Account" }, new { @class = "btn btn-default" })
 }
 else
