--- a/BookStore/Views/Admin/Edit.cshtml
+++ b/BookStore/Views/Admin/Edit.cshtml
@@ -22,9 +22,17 @@
                 <div id="Genres">
                     @Html.EditorFor(b => b.Genres, new { @class = "single-line" })
                 </div>
-                <div class="editor-label">@Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin", new { title = @Model.Title, lastName = @Model.Authors.First().Last_Name, firstName = @Model.Authors.First().First_Name, bookId = @Model.Book_ID}, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })</div>
+                <div class="editor-label">
+                    @Ajax.ActionLink("Search Annotation", "FindBookAnnotation", "Admin",
+                new { title = @Model.Title, lastName = @Model.Authors.First().Last_Name, firstName = @Model.Authors.First().First_Name, bookId = @Model.Book_ID },
+                new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })
+                </div>
                 <div class="editor-field">@Html.EditorFor(b => b.Annotation, new { @class = "single-line" })</div>
-                <div class="editor-label">@Ajax.ActionLink("Search Image", "FindBookImage", "Admin", new { title = @Model.Title, lastName = @Model.Authors.First().Last_Name, firstName = @Model.Authors.First().First_Name, bookId = @Model.Book_ID }, new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })</div>
+                <div class="editor-label">
+                    @Ajax.ActionLink("Search Image", "FindBookImage", "Admin",
+                new { title = @Model.Title, lastName = @Model.Authors.First().Last_Name, firstName = @Model.Authors.First().First_Name, bookId = @Model.Book_ID },
+                new AjaxOptions { UpdateTargetId = "search", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })
+                </div>
                 <div class="editor-field">@Html.EditorFor(b => b.Image_url, new { @class = "single-line" })</div>
                 <div class="editor-label">@Html.LabelFor(b => b.Price, new { @class = "single-line" })</div>
                 <div class="editor-field">@Html.EditorFor(b => b.Price, new { @class = "single-line", type = "number", step = "any" })</div>
