--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -1,4 +1,5 @@
-﻿@model BookStore.DO.Entities.Book
+﻿@using System.Diagnostics.Eventing.Reader
+@model BookStore.DO.Entities.Book
 <div class="container-fluid book ">
     <div class="row itemb">
         <div class="col-md-10 col-lg-10 ">
@@ -23,7 +24,14 @@
             </div>
         </div>
         <div class="col-md-2 col-lg-2 image">
-            <img src="@Model.Image_url" class="img-thumbnail" />
+            @if (Model.Image_url != null)
+            {
+                <img src="@Url.Content(Model.Image_url)" class="img-thumbnail" alt="images"/>
+            }
+            else
+            {
+                <img src="@Url.Content("~/Content/Images/imgBook0.jpg")" class="img-thumbnail" alt="images" />
+            }
         </div>
     </div>
 </div>
