--- a/BookStore/Views/Admin/AuthorsView.cshtml
+++ b/BookStore/Views/Admin/AuthorsView.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>AuthorsView</h2>
-@foreach (BookStore.Domain.Entities.Book book in @Model.Books)
+@foreach (BookStore.DO.Entities.Book book in @Model.Books)
 {
     <p>@book.Title</p>
 }
