--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -18,9 +18,11 @@
             <div class="tags">
                 @foreach (var tag in @Model.Tages)
                 {
-                    @Html.ActionLink(tag.Tag_Name, "ListByTag", "Book", new { tagID = tag.Tag_ID }, null)
+                    @Html.ActionLink(tag.Tag_Name, "ListByTag", "Book", new {tagID = tag.Tag_ID}, null)
                 }
             </div>
+            
+            <input id="input-id" bookId="@Model.Book_ID" type="number"  class="rating" star=10 size="sm" min=0 max=10 step=1 data-size="sm" data-rtl="false">
         </div>
         <div class="col-md-2 col-lg-2 image">
             <img src="@Model.Image_url" class="img-thumbnail"/>
