--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -7,6 +7,11 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
+    <script src="~/scripts/jquery-1.9.1.js"></script>
+    <link href="~/content/star-rating.min.css" rel="stylesheet" />
+    <script src="~/scripts/star-rating.js"></script>
+    <script src="~/scripts/demo.js"></script>
+    <script src="~/scripts/star-rating.min.js"></script>
     <meta name="description" content="The description of my page" />
 </head>
 <body>
