--- a/BookStore/Views/Admin/FindBookAnnotation.cshtml
+++ b/BookStore/Views/Admin/FindBookAnnotation.cshtml
@@ -10,11 +10,12 @@
 @foreach (string result in @Model)
 {
     <span class="search">
-        @Ajax.ActionLink(
+        @*@Ajax.ActionLink(
         result.Substring(0,127),
         "SaveAnnotation",
         "Admin",
         new { annotation = @result, bookId = (int)ViewData["BookID"] },
-        new AjaxOptions { UpdateTargetId = "edit", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })
+        new AjaxOptions { UpdateTargetId = "edit", InsertionMode = InsertionMode.Replace, HttpMethod = "POST" })*@
+        <p class="description" onclick="return SaveDesc($(this))">@result</p>
     </span>
 }
