--- a/BookStore/Views/Shared/BookHeader.cshtml
+++ b/BookStore/Views/Shared/BookHeader.cshtml
@@ -1,26 +1,39 @@
 ﻿@model BookStore.DO.Entities.Book
 <div class="container-fluid ">
     <div class="row bookheader">
-        <div class="col-md-10 col-lg-10 ">
-            <p class="title">@Model.Title</p>
-            @foreach (var author in Model.BookAuthors)
-            {
-                <p class="author">@author.First_Name @author.Middle_Name @author.Last_Name</p>
-            }
-            <p class="glyphicon glyphicon-star rate" aria-hidden="true">@Model.Rating</p>
-            <p class="price">@Model.Price.ToString("c")</p>
-        </div>
-        <div class="col-md-2 col-lg-2 smallimage">
+        <div class="col-md-1 col-lg-1 smallimage">
             <a href="@Url.Action("BookDetails", "Book", new {bookId = @Model.Book_ID})">
                 @if (Model.Image_url != null)
-            {
-                <img src="@Url.Content(Model.Image_url)" class="img-thumbnail" alt="images"/>
-            }
-            else
-            {
-                <img src="@Url.Content("~/Content/Images/imgBook0.jpg")" class="img-thumbnail" alt="images" />
-            }
+                {
+                    <img src="@Url.Content(Model.Image_url)" class="img-thumbnail" alt="images" />
+                }
+                else
+                {
+                    <img src="@Url.Content("~/Content/Images/imgBook0.jpg")" class="img-thumbnail" alt="images" />
+                }
             </a>
         </div>
+        <div class="col-md-11 col-lg-11 ">
+            <div class="signature">
+                <p class="title">@Model.Title</p>
+                @foreach (var author in Model.BookAuthors)
+                {
+                    <p class="author">
+                        @author.First_Name @{
+                    if (author.Middle_Name != null)
+                    {
+                        @author.Middle_Name ; 
+                    }}
+                        @author.Last_Name
+                    </p>
+                }
+                <p class="glyphicon glyphicon-star rate" aria-hidden="true">@Model.Rating</p>
+
+            </div>
+            <div class="like-rate">
+                <p class="price">@Model.Price.ToString("c")</p>
+            </div>
+        </div>
+
     </div>
 </div>
