--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -6,13 +6,13 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
-    <script src="~/scripts/jquery-1.9.1.js"></script>
-    <script src="~/scripts/jquery-ui-1.8.24.js"></script>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     <link href="~/content/star-rating.min.css" rel="stylesheet" />
+    @*<script src="~/scripts/jquery-1.9.1.js"></script>
+    <script src="~/scripts/jquery-ui-1.8.24.js"></script>*@
     <script src="~/scripts/star-rating.js"></script>
-    <script src="~/scripts/demo.js"></script>
-    <script src="~/scripts/star-rating.min.js"></script>
+    <script src="~/scripts/rate.js"></script>
     <meta name="description" content="The description of my page" />
 </head>
 <body>
@@ -43,8 +43,7 @@
 </div>
 
     <div id="PopupWrapper"></div>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")
+    
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/common")
     @RenderSection("scripts", required: false)
