--- a/BookStore/Content/Site1.scss
+++ b/BookStore/Content/Site1.scss
@@ -182,6 +182,83 @@ textarea {
             }
         }
     }
+
+    .detailBox {
+        width: 100%;
+        //border: 1px solid #bbb;
+        margin: 50px;
+    }
+
+    .titleBox {
+        background-color: #fdfdfd;
+        padding: 10px;
+
+        label {
+            color: #444;
+            margin: 0;
+            display: inline-block;
+        }
+    }
+
+    .commentBox {
+        padding: 10px;
+        border-top: 1px dotted #bbb;
+    }
+
+
+.actionBox {
+    //border-top: 1px dotted #bbb;
+    padding: 10px;
+}
+
+.taskDescription {
+    margin-top: 10px 0;
+}
+
+.commentList {
+    padding: 0;
+    list-style: none;
+    max-height: 200px;
+    overflow: auto;
+
+    li {
+        margin: 0;
+        margin-top: 10px;
+        border-radius:5px;
+        background-color:Menu;
+        div {
+            display: table-cell;
+        }
+    }
+}
+
+.commenterImage {
+    width: 30px;
+    margin-right: 5px;
+    height: 100%;
+    float: left;
+
+    img {
+        width: 100%;
+        border-radius: 50%;
+    }
+}
+
+.sub-text {
+    color: #aaa;
+    font-family: verdana;
+    font-size: 11px;
+}
+
+.commentText p {
+    margin: 0;
+}
+.form-group{
+    .btn{
+    margin:5px;
+
+    }
+}
 }
 
 DIV.pager A.selected {
@@ -204,38 +281,36 @@ DIV.pager A.selected {
     padding: 2px;
     border-bottom: 1px dotted;
     border-bottom-color: silver;
-    border-radius:10px;
-    background-color:whitesmoke;
-    .signature {
-       // width: 80%;
+    border-radius: 10px;
+    background-color: whitesmoke;
 
+    .signature {
+        // width: 80%;
         .title {
             font-family: 'Book Antiqua';
             font-size: 16px;
-            color:InactiveCaptionText;
+            color: InactiveCaptionText;
         }
 
         .author {
             font-family: 'Book Antiqua';
-            color:$color_storm_dust_approx;
+            color: $color_storm_dust_approx;
             font-size: 14px;
         }
-           .rate {
-            float:right;
+
+        .rate {
+            float: right;
             text-align: right;
             font-size: 20px;
         }
     }
 
     .like-rate {
-       // width: 20%;
+        // width: 20%;
         .price {
             text-align: right;
             font-size: 12px;
         }
-     
-
-       
     }
 
     p {
