--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -1,9 +1,11 @@
 ﻿@using System.Diagnostics.Eventing.Reader
+@using BookStore.DO.Entities
 @model BookStore.DO.Entities.Book
 <div class="container-fluid book ">
     <div class="row itemb">
         <div class="col-md-10 col-lg-10 ">
             <p class="title">@Model.Title</p>
+            @Html.HiddenFor(x => x.Book_ID, new { id = "thisBookId" })
             @foreach (var author in Model.BookAuthors)
             {
                 <p class="author">@author.First_Name @author.Middle_Name @author.Last_Name</p>
@@ -19,17 +21,39 @@
             <div class="tags">
                 @foreach (var tag in @Model.Tages)
                 {
-                    @Html.ActionLink(tag.Tag_Name, "ListByTag", "Book", new {tagID = tag.Tag_ID}, null)
+                    @Html.ActionLink(tag.Tag_Name, "ListByTag", "Book", new { tagID = tag.Tag_ID }, null)
                 }
             </div>
 
             <input id="input-id" bookid="@Model.Book_ID" type="number" class="rating" star=10 size="sm" min=0 max=10 step=1 data-size="sm" data-rtl="false">
             <div class="comments">
-                @foreach (var comment in @Model.Comments)
-                {
-                    @Html.EditorFor(x=>comment.Context)
+                <div class="detailBox">
+                    <div class="actionBox">
+                        <ul class="commentList">
+                            @foreach (var comment in @Model.Comments)
+                            {
+                                <li>
+                                    <div class="commenterImage">
+                                        <img src="http://lorempixel.com/50/50/people/6" />
+                                    </div>
+                                    <div class="commentText">
+                                        <p class="">@comment.Context</p> <span class="date sub-text">on March 5th, 2014</span>
+                                    </div>
+                                </li>
+                            }
+                        </ul>
+                        @*<div class="form-group">
+                                <textarea class="form-control" rows="4" placeholder="Your comments" id="areaCommment"></textarea>
+                            </div>*@
+                        <div class="form-group form-input">
+                            @*<button class="btn btn-default" id="addComment"
+                                onclick="return addComment(@Model.Book_ID,@Session["UserId"])">Add</button>*@
+                            @{ Html.RenderPartial("Comment",
+                                   new Comment { Book_ID = @Model.Book_ID, User_ID = (int)@Session["userId"] }); }
+                        </div>
+                    </div>
+                </div>
 
-                }
             </div>
         </div>
         <div class="col-md-2 col-lg-2 image">
