--- a/BookStore/Content/Site1.scss
+++ b/BookStore/Content/Site1.scss
@@ -234,12 +234,12 @@ textarea {
 
 .commenterImage {
     width: 30px;
-    margin-right: 5px;
+    margin: 5px;
     height: 100%;
     float: left;
 
     img {
-        width: 100%;
+        width: 30px;
         border-radius: 50%;
     }
 }
