--- a/BookStore/Views/User/Index.cshtml
+++ b/BookStore/Views/User/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="container-fluid  ">
     <div class="row ">
-        <div class="col-md-10 col-lg-10 ">
+        <div class="col-md-8 col-lg-8 ">
             <div class="name">
                 <p>@Model.First_Name</p>
                 <p>@Model.Last_Name</p>
@@ -33,8 +33,7 @@
                 }
             </div>
         </div>
-        <div class="col-md-2 col-lg-2 ">
-            <img src="@Model.Avatar_Url" alt="" />
-        </div>
+        <div class="col-md-4 col-lg-4 ">
+            <img src="@Url.Content(Model.Avatar_Url)" alt="Avatar" /></div>
     </div>
 </div>
