--- a/BookStore/Views/User/Index.cshtml
+++ b/BookStore/Views/User/Index.cshtml
@@ -25,13 +25,26 @@
                 }
             </div>
             <div class="readedBooks">
-                <h2>Прочитанные книги</h2>
-                @foreach (var book in Model.RatedBooks)
-                {
-                    <p>@book.Book.Title</p>
-                    <p>@book.RateValue</p>
-                }
-            </div>
+                <div class="accordion" id="accordion2">
+                    <div class="accordion-group">
+                        <div class="accordion-heading">
+                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                                Прочитанные книги
+                            </a>
+                        </div>
+                        <div id="collapseOne" class="accordion-body collapse">
+                            <div class="accordion-inner">
+                                                    @foreach (var book in Model.RatedBooks)
+                    {
+
+                        <p>@book.Book.Title</p>
+                        <p>@book.RateValue</p>
+                    }
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
         </div>
         <div class="col-md-4 col-lg-4 ">
             <img src="@Url.Content(Model.Avatar_Url)" alt="Avatar" /></div>
