--- a/BookStore/Views/Shared/Comment.cshtml
+++ b/BookStore/Views/Shared/Comment.cshtml
@@ -1,10 +1,10 @@
 ﻿@model BookStore.DO.Entities.Comment
 
-@using ((Html.BeginForm("AddComments","Book")))
+@using (Html.BeginForm("AddComments","Book",FormMethod.Post))
 {
     @Html.HiddenFor(x=>x.Book_ID)
     @Html.HiddenFor(x=>x.User_ID)
-    @Html.TextAreaFor(x => x.Context, new {  @class="form-control", rows="4", placeholder="Your comments", id="areaCommment" });
+    @Html.TextAreaFor(x => x.Context, new {  @class="form-control", rows="4", placeholder="Your comments" });
     <input type="submit" class="btn btn-default" value="Add"/>
 }
 
