--- a/BookStore/Views/Nav/Menu.cshtml
+++ b/BookStore/Views/Nav/Menu.cshtml
@@ -1,23 +1,34 @@
-﻿@model IEnumerable<string>
-<ul class="nav nav-pills nav-stacked">
-    <li role="presentation">@Html.ActionLink("Home", "List", "Book")</li>
-    @foreach (var link in Model)
-    {
-        if (link != null)
-        {
-            <li role="presentation"
-                @if (ViewBag.SelectedGenre == link) {
-                      @: class="active"
-                                                  }>
-                @Html.RouteLink(link, new
-                {
-                controller = "Book",
-                action = "ListByGenre",
-                genre = link,
-                page = 1
-                })
-            </li>
-        }
-    }    
-</ul>
+﻿
+<div class="accordion" id="accordion2">
+    <div class="accordion-group">
+        <div class="accordion-heading">
+            <a class="accordion-toggle"  data-toggle="collapse" data-parent="#accordion2" href="#genres">
+                Жанры
+            </a>
+        </div>
+        <div id="genres" class="accordion-body collapse">
+            <div class="accordion-inner">
+                @{Html.RenderAction("Genres");}
+            </div>
+        </div>
+    </div>
+    <div class="accordion-group">
+        <div class="accordion-heading">
+            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#authors">
+                Авторы
+            </a>
+        </div>
+        <div id="authors" class="accordion-body collapse">
+            <div class="accordion-inner">
+                @{Html.RenderAction("Authors");}
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 
