--- a/BookStore/Views/Shared/BookSummary.cshtml
+++ b/BookStore/Views/Shared/BookSummary.cshtml
@@ -43,7 +43,7 @@
                                         <img src="@Url.Content(Session["UserImage"].ToString())" />
                                     </div>
                                     <div class="commentText">
-                                        <p class="">@comment.Context</p> <span class="date sub-text">on March 5th, 2014</span>
+                                        <p class="">@comment.Context</p> <span class="date sub-text">@comment.DataCreate</span>
                                     </div>
                                 </li>
                             }
