--- a/BookStore/Views/Shared/Comment.cshtml
+++ b/BookStore/Views/Shared/Comment.cshtml
@@ -4,6 +4,7 @@
 {
     @Html.HiddenFor(x=>x.Book_ID)
     @Html.HiddenFor(x=>x.User_ID)
+    @Html.HiddenFor(x=>x.DataCreate)
     @Html.TextAreaFor(x => x.Context, new {  @class="form-control", rows="4", placeholder="Your comments" });
     <input type="submit" class="btn btn-default" value="Add"/>
 }
