--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -8,10 +8,8 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryui")
-    <link href="~/content/star-rating.min.css" rel="stylesheet"/>
-    @*<script src="~/Scripts/addCommet.js"></script>*@
-    @*<script src="~/scripts/jquery-1.9.1.js"></script>
-        <script src="~/scripts/jquery-ui-1.8.24.js"></script>*@
+    <script src="~/scripts/typeahead.bundle.js"></script>
+    <link href="~/content/star-rating.css" rel="stylesheet" />
     <script src="~/scripts/star-rating.js"></script>
     <script src="~/scripts/rate.js"></script>
     <meta name="description" content="The description of my page" />
@@ -22,7 +20,9 @@
             <div class="col-md-3 logo">
                 <h1>Book Library</h1>
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <input type="text" id="find" data-provide="typeahead" data-items="4" >
+            </div>
             <div class="col-md-3 user">
                 @*@Html.RouteLink("Admin/Index", new { action = "Index", controller = "Admin" }, new { @class = "btn btn-default" })*@
                 @{Html.RenderAction("UserLogin", "Account");}
